@startuml LapBienBanBanGiao_3Lop
title SO DO LOP 3 TANG - LAP BIEN BAN BAN GIAO

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

'=====================
' TANG GIAO DIEN
'=====================
package "TANG GIAO DIEN" #EAF2F8 {
  class MHLapBienBanBanGiao {
    - txtTimKiem: TextBox
    - grvDSHopDongChoBanGiao: GridView
    - lblThongTinHopDong: Label
    - grvTaiSanBanGiao: GridView
    - txtSoLuongThucTe: TextBox
    - cbTinhTrang: ComboBox
    - txtGhiChu: TextBox
    - btnChotBanGiao: Button
    - btnHuyBanGiao: Button
    --
    + hienThiForm()
    + nhapTuKhoaTimKiem(tuKhoa: String)
    + hienThiDanhSachHopDong()
    + chonHopDong(maHD: String)
    + hienThiDanhSachTaiSan()
    + nhapSoLuongVaTinhTrang()
    + btnChotBanGiao_Click()
    + btnHuyBanGiao_Click()
    + hienThiThongBaoThanhCong()
    + hienThiLoiDuLieu()
    + hienThiThongBaoHuy()
  }
}

'=====================
' TANG NGHIEP VU
'=====================
package "TANG NGHIEP VU" #FCF3CF {
  class LapBienBanBanGiao {
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + LayChiTietBanGiao(maHD: String): ChiTietBanGiao
    + ChotBienBan(maHD: String, maNV: String, taiSan: IReadOnlyList<TaiSanBanGiaoInput>): BienBanGiaoNhan
  }

  class HopDong {
    - MaHD: String
    - NgayKy: DateTime?
    - NgayBatDau: DateTime
    - NgayKetThuc: DateTime
    - KyThanhToan: int?
    - GiaThue: decimal
    - TrangThai: String
    - MaNV: String
    - MaPhieuCoc: String
    - TienCoc: decimal
    --
    + KiemTraChoBanGiao()
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + DocChiTiet(maHD: String): HopDong
    + ChuyenTrangThaiDangHieuLuc()
  }

  class BienBanGiaoNhan {
    - MaBienBan: String
    - NgayBanGiao: DateTime
    - LoaiBienBan: String
    - MaHD: String
    - MaNV: String
    --
    + KhoiTaoBanGiao(maHD: String, maNV: String, ngayBanGiao: DateTime, chiTiet: IEnumerable<ChiTietGiaoNhan>): BienBanGiaoNhan
    + KiemTraDuLieuTaiSan()
    + TonTaiBanGiaoTheoHD(maHD: String): Boolean
    + LuuBienBan()
  }

  class ChiTietGiaoNhan {
    - MaBienBan: String
    - MaTS: String
    - TinhTrang: String
    - SoLuong: int
    - GhiChu: String
    - SoLuongTieuChuan: int
    --
    + KiemTraHopLe()
    + ThemNhieu(chiTiet: IEnumerable<ChiTietGiaoNhan>)
  }

  class PhongTaiSan {
    - MaPhong: String
    - MaTS: String
    - SoLuongTieuChuan: int
    --
    + LayTaiSanTheoPhong(maPhong: String): IReadOnlyList<PhongTaiSan>
  }

  class Giuong {
    - MaGiuong: String
    - TrangThai: String
    --
    + CapNhatDangSuDungTheoHD(maHD: String)
  }
}

'=====================
' TANG TRUY CAP DU LIEU
'=====================
package "TANG TRUY CAP DU LIEU" #FDEDEC {
  class HopDongDB {
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + DocChiTiet(maHD: String): HopDong
    + UpdateTrangThai(maHD: String, trangThai: String): Boolean
    + TonTaiChoBanGiaoTheoHD(maHD: String): Boolean
  }

  class BienBanGiaoNhanDB {
    + Them(bienBan: BienBanGiaoNhan)
    + TonTaiBanGiaoTheoHD(maHD: String): Boolean
  }

  class ChiTietGiaoNhanDB {
    + ThemNhieu(chiTiet: IEnumerable<ChiTietGiaoNhan>)
  }

  class PhongTaiSanDB {
    + LayTaiSanTheoPhong(maPhong: String): IReadOnlyList<PhongTaiSan>
  }

  class GiuongDB {
    + UpdateTrangThaiTheoHopDong(maHD: String, trangThai: String)
  }
}

'=====================
' QUAN HỆ (ASSOCIATIONS)
'=====================
MHLapBienBanBanGiao o-- LapBienBanBanGiao

LapBienBanBanGiao o-- HopDong
LapBienBanBanGiao o-- BienBanGiaoNhan
LapBienBanBanGiao o-- ChiTietGiaoNhan
LapBienBanBanGiao o-- PhongTaiSan
LapBienBanBanGiao o-- Giuong

HopDong o-- HopDongDB
BienBanGiaoNhan o-- BienBanGiaoNhanDB
ChiTietGiaoNhan o-- ChiTietGiaoNhanDB
PhongTaiSan o-- PhongTaiSanDB
Giuong o-- GiuongDB

@enduml